<?xml version="1.0"?>

<package format="2">
  <name>condition_plugins</name>
  <version>0.0.0</version>
  <description>The condition_plugins package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>scenario_conditions</depend>
  <depend>scenario_logger</depend>
  <depend>scenario_logger_msgs</depend>
  <depend>scenario_utility</depend>

  <export>
    <scenario_conditions plugin="${prefix}/plugins.xml" />
  </export>
</package>
