<?xml version="1.0"?>

<package format="2">
  <name>condition_plugins</name>
  <version>0.0.0</version>
  <description>The condition_plugins package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>scenario_conditions</depend>
  <depend>scenario_intersection</depend>
  <depend>scenario_logger</depend>
  <depend>scenario_logger_msgs</depend>
  <depend>scenario_utility</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <scenario_conditions plugin="${prefix}/plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
