<?xml version="1.0"?>

<package format="2">
  <name>scenario_conditions</name>
  <version>0.0.0</version>
  <description>The scenario_conditions package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>scenario_api</depend>
  <depend>scenario_intersection</depend>
  <depend>scenario_utility</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>
</package>
