<?xml version="1.0"?>

<package format="2">
  <name>entity_plugins</name>
  <version>0.0.0</version>
  <description>The entity_plugins package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>scenario_actions</depend>
  <depend>scenario_entities</depend>
  <depend>scenario_logger</depend>
  <depend>scenario_utility</depend>

  <export>
    <scenario_entities plugin="${prefix}/plugins.xml" />
  </export>
</package>
