<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>entity_plugins</name>
  <version>0.0.0</version>
  <description>The entity_plugins package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>scenario_actions</depend>
  <depend>scenario_entities</depend>
  <depend>scenario_logger</depend>
  <depend>scenario_utility</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <scenario_entities plugin="${prefix}/plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
